[feed] tweak styles to prevent overflow

--- a/app/modules/shell/styles/navbar.styl
+++ b/app/modules/shell/styles/navbar.styl
@@ -54,6 +54,7 @@ form.edit-form,
 ul[data-scroll-loader]
   max-height 100%
   overflow-y auto
+  overflow-x hidden
 
 // User profile icon
 img.avatar
